@@ -1,3 +1,8 @@
+2009-11-11  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_normalize.c: Recognise 9841 and 1024 projection methods as 
+	CT_Mercator: http://trac.osgeo.org/gdal/ticket/3217
+
 2009-10-19  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* csv/{gcs,pcs}.override.csv: Add comments on where the master lives
